plugins {
    id 'idea'
    id 'application'
    id 'java'
}

group 'uk.gov.di.ipv'

repositories {
    mavenCentral()
}

sourceCompatibility = 17

dependencies {
    implementation "com.sparkjava:spark-core:2.9.3",
        "com.sparkjava:spark-template-mustache:2.7.1",
        "com.nimbusds:oauth2-oidc-sdk:9.3.1",
        "com.fasterxml.jackson.core:jackson-core:2.13.0",
        "com.fasterxml.jackson.core:jackson-databind:2.13.0",
        "com.fasterxml.jackson.core:jackson-annotations:2.13.0",
        "org.slf4j:slf4j-simple:1.7.32"

    compileOnly 'org.projectlombok:lombok:1.18.22'
    annotationProcessor 'org.projectlombok:lombok:1.18.22'

    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1',
            "org.mockito:mockito-core:3.12.4"
}

test {
    useJUnitPlatform ()
}

run {
    debugOptions {
        enabled = true
        port = 8084
        server = true
        suspend = false
    }
}

mainClassName = 'uk.gov.di.ipv.stub.cred.App'
